[gd_scene load_steps=4 format=3 uid="uid://cqbpreij2q13u"]

[ext_resource type="Script" path="res://material_maker/widgets/size_option_button/size_option_button.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="2"]
[ext_resource type="Script" path="res://material_maker/panels/paint/paint_project_settings.gd" id="3"]

[node name="PaintProjectSettings" type="Window"]
title = "Paint Project Settings"
exclusive = true
always_on_top = true
extend_to_title = true
script = ExtResource("3")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="TextureSize" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox/TextureSize"]
layout_mode = 2
text = "Texture2D size:"

[node name="SizeOptionButton" type="OptionButton" parent="Margin/VBox/TextureSize"]
layout_mode = 2
script = ExtResource("1")
min_size = 8
max_size = 12

[node name="PaintEmission" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Paint Emission"

[node name="PaintNormal" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Paint Normal"

[node name="PaintDepth" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Paint Depth"

[node name="Bump" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="PaintBump" type="CheckBox" parent="Margin/VBox/Bump"]
layout_mode = 2
text = "Normals from depth"

[node name="BumpStrength" parent="Margin/VBox/Bump" instance=ExtResource("2")]
layout_mode = 2
step = 0.01
float_only = true

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Apply" type="Button" parent="Margin/VBox/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Apply"

[node name="OK" type="Button" parent="Margin/VBox/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="Margin/VBox/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Cancel"

[connection signal="minimum_size_changed" from="Margin" to="." method="_on_Margin_minimum_size_changed"]
[connection signal="pressed" from="Margin/VBox/Buttons/Apply" to="." method="apply_settings"]
[connection signal="pressed" from="Margin/VBox/Buttons/OK" to="." method="ok"]
[connection signal="pressed" from="Margin/VBox/Buttons/Cancel" to="." method="queue_free"]
